<resources>
    <string name="app_name">Locatio</string>
    <string name="app_description">An application that’s revolutionizing the way people think about location</string>

    <!-- Alert box -->
    <string name="alert_error">Error</string>
    <string name="alert_warning">Warning</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_error_unknown">Unknown error</string>

    <!-- Welcome screen -->
    <string name="application_logo">Application logo</string>
    <string name="btn_add_location">Add location</string>

    <!-- Location informations -->
    <string name="location_info_label">Label</string>
    <string name="location_info_address">Full address</string>
    <string name="location_info_coordinates">Coordinates</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="btn_edit_location">Edit location</string>

    <!-- Add location -->
    <string name="add_location_latitude">Latitude</string>
    <string name="add_location_longitude">Longitude</string>
    <string name="add_location_label">Label</string>
    <string name="add_location_address">Address</string>
    <string name="add_location_image">Image</string>
    <string name="btn_save_location">Save location</string>
    <string name="btn_cancel">Cancel</string>

    <string name="distance_text">Distance from your current location is %.02f km</string>
    <string name="address_text">Address: %s</string>

</resources>