<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrollviewLocationInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:scrollbars="vertical"
        tools:context=".add_location.AddLocationFragment">

        <LinearLayout
            android:id="@+id/layoutPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Back button -->
                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_circle"
                    android:src="@drawable/ic_backward" />

            </FrameLayout>

            <!-- Latitude -->
            <TextView
                style="@style/LocationInfoTitle"
                android:text="@string/add_location_latitude" />

            <EditText
                android:id="@+id/editLatitude"
                style="@style/LocationInfoContent"
                tools:text="46.77131" />

            <!-- Longitude -->
            <TextView
                style="@style/LocationInfoTitle"
                android:text="@string/add_location_longitude" />

            <EditText
                android:id="@+id/editLongitude"
                style="@style/LocationInfoContent"
                tools:text="23.596745" />

            <!-- Label -->
            <TextView
                style="@style/LocationInfoTitle"
                android:text="@string/add_location_label" />

            <EditText
                android:id="@+id/editLabel"
                style="@style/LocationInfoContent"
                tools:text="Avram Iancu" />

            <!-- Address -->
            <TextView
                style="@style/LocationInfoTitle"
                android:text="@string/add_location_address" />

            <EditText
                android:id="@+id/editAddress"
                style="@style/LocationInfoContent"
                tools:text="Piata Avram Iancu 18" />

            <!-- Address -->
            <TextView
                style="@style/LocationInfoTitle"
                android:text="@string/add_location_image" />

            <EditText
                android:id="@+id/editImage"
                style="@style/LocationInfoContent"
                tools:text="https://upload.wikimedia.org/wikipedia/commons/7/79/Catedrala_Arhiepiscopiei_din_Cluj-Napoca.jpg" />

            <Button
                android:id="@+id/btnAddLocation"
                style="@style/FlatButtonBlack"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_add_location" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/FlatButtonBlack"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/btn_cancel" />

        </LinearLayout>

    </ScrollView>

</layout>