<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".LocationInfoDataBinding">

        <variable
            name="location"
            type="com.mendelin.locatio.models.LocationInfoRealmObject" />

        <variable
            name="fullAddress"
            type="String" />

        <variable
            name="coordinates"
            type="String" />

    </data>

    <ScrollView
        android:id="@+id/scrollviewLocationInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:scrollbars="vertical"
        tools:context=".ui.fragments.LocationInfoFragment">

        <LinearLayout
            android:id="@+id/layoutPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="320dp">

                <!-- Location image -->
                <ImageView
                    android:id="@+id/imgLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_placeholder"
                    app:locationImage="@{location.image}"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <!-- Back button -->
                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_circle"
                    android:src="@drawable/ic_backward" />

            </FrameLayout>

            <!-- Location label -->
            <TextView
                style="@style/LocationInfoTitle"
                android:text="@string/location_info_label" />

            <TextView
                android:id="@+id/txtLabel"
                style="@style/LocationInfoContent"
                android:text="@{location.label}"
                tools:text="Avram Iancu" />

            <!-- Location full address -->
            <TextView
                style="@style/LocationInfoTitle"
                android:text="@string/location_info_address" />

            <TextView
                android:id="@+id/txtAddress"
                style="@style/LocationInfoContent"
                android:text="@{fullAddress}"
                tools:text="Piata Avram Iancu 18" />

            <!-- Coordinates country -->
            <TextView
                style="@style/LocationInfoTitle"
                android:text="@string/location_info_coordinates" />

            <TextView
                android:id="@+id/txtCoordinates"
                style="@style/LocationInfoContent"
                android:text="@{coordinates}"
                android:textColor="@android:color/holo_blue_dark"
                tools:text="46.77131, 23.596745" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnEditLocation"
                style="@style/FlatButtonBlack"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/btn_edit_location" />

        </LinearLayout>

    </ScrollView>

</layout>